Log window minor fixes